Dynamically fetch abbreviation buttons

--- a/www/templates/tab-shifts.html
+++ b/www/templates/tab-shifts.html
@@ -73,7 +73,7 @@
       <div class="shift-input-buttons-holder">
         <span ng-repeat="shift in shiftTypes">
           <button class="button button-small button-balanced">
-            {{shift}}
+            {{shift.abbreviation}}
           </button>
         </span>
         <span>
