--- a/www/templates/group-detail.html
+++ b/www/templates/group-detail.html
@@ -1,7 +1,7 @@
 <ion-view>
 <ion-nav-title>Details</ion-nav-title>
-  <ion-nav-buttons side="left" >
-    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/groups">Groups</a>
+  <ion-nav-buttons side="left">
+    <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/groups/index">Groups</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
