Move shift patterns into general tab

--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -8,7 +8,7 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
 
-      <a class="item item-icon-left item-icon-right" href="#">
+      <a class="item item-icon-left item-icon-right" href="#/tab/general/patterns/index">
         <i class="icon ion-ios-calendar"></i>
         Shift patterns
         <i class="icon ion-chevron-right icon-accessory"></i>
