--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -10,7 +10,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-groups"></ion-nav-view>
   </ion-tab>
 
-  <!-- Dashboard Tab -->
+  <!-- Calendar Tab -->
   <ion-tab title="Shifts" icon="ion-calendar" href="#/tab/shifts/">
     <ion-nav-view name="tab-shifts"></ion-nav-view>
   </ion-tab>
