Reorganize groups under proper general grouping

--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -2,7 +2,7 @@
   <ion-content>
     <div class="list">
 
-      <a class="item item-icon-left item-icon-right" href="#/tab/groups/index">
+      <a class="item item-icon-left item-icon-right" href="#/tab/general/groups/index">
         <i class="icon ion-ios-people"></i>
         Groups
         <i class="icon ion-chevron-right icon-accessory"></i>
