--- a/www/templates/general/groups/index.html
+++ b/www/templates/general/groups/index.html
@@ -3,14 +3,14 @@
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/general/index">General</a>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
-    <a class="button button-clear button-white" href="#/tab/groups/create">Add</a>
+    <a class="button button-clear button-white" href="#/tab/general/groups/create">Add</a>
   </ion-nav-buttons>
   <div class="row loader-holder">
     <ion-spinner class="actual-loader spinner-positive" icon="lines" ng-show="loader"></ion-spinner>
   </div>
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="group in groups" class="item-icon-right" type="item-text-wrap" href="#/tab/groups/{{group.id}}">
+      <ion-item ng-repeat="group in groups" class="item-icon-right" type="item-text-wrap" href="#/tab/general/groups/{{group.id}}">
         {{group.name}}
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
