Initial setup for calendar tab

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,13 +5,8 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-background-positive tabs-color-light">
 
-  <!-- Groups Tab -->
-  <ion-tab title="Groups" icon="ion-ios-people" href="#/tab/groups">
-    <ion-nav-view name="tab-groups"></ion-nav-view>
-  </ion-tab>
-
   <!-- Calendar Tab -->
-  <ion-tab title="Shifts" icon="ion-calendar" href="#/tab/shifts/">
+  <ion-tab title="Calendar" icon="ion-calendar" href="#/tab/shifts/">
     <ion-nav-view name="tab-shifts"></ion-nav-view>
   </ion-tab>
 
@@ -24,6 +19,5 @@ navigation history that also transitions its views in and out.
   <ion-tab title="General" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/general/index">
     <ion-nav-view name="tab-general"></ion-nav-view>
   </ion-tab>
-
 
 </ion-tabs>
