--- a/www/templates/general/index.html
+++ b/www/templates/general/index.html
@@ -14,7 +14,7 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
       </a>
 
-      <a class="item item-icon-left item-icon-right" href="#">
+      <a class="item item-icon-left item-icon-right" href="#/tab/general/account/new">
         <i class="icon ion-person"></i>
         Account
         <i class="icon ion-chevron-right icon-accessory"></i>
