Cleaned up organization for calendar tab

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,8 +6,8 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-background-positive tabs-color-light">
 
   <!-- Calendar Tab -->
-  <ion-tab title="Calendar" icon="ion-calendar" href="#/tab/shifts/">
-    <ion-nav-view name="tab-shifts"></ion-nav-view>
+  <ion-tab title="Calendar" icon="ion-calendar" href="#/tab/calendar/index">
+    <ion-nav-view name="tab-calendar"></ion-nav-view>
   </ion-tab>
 
   <!-- Chats Tab -->
