Remove chats tab - replace with swaps tab

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -10,9 +10,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-calendar"></ion-nav-view>
   </ion-tab>
 
-  <!-- Chats Tab -->
-  <ion-tab title="Swaps" icon-off="ion-arrow-swap" icon-on="ion-arrow-swap" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <!-- Swaps Tab -->
+  <ion-tab title="Swaps" icon-off="ion-arrow-swap" icon-on="ion-arrow-swap" href="#/tab/swaps/index">
+    <ion-nav-view name="tab-swaps"></ion-nav-view>
   </ion-tab>
 
   <!-- General Tab -->
