Refactor highlighting to calendar; fix bug in next jumping to month

--- a/www/css/calendar/calendar.css
+++ b/www/css/calendar/calendar.css
@@ -49,9 +49,9 @@
   padding: 0px;
 }
 
-.dates .date-col.active {
+/*.dates .date-col.active {
   background-color: #FFFF9D;
-}
+}*/
 
 .dates .col.not-current-month {
   color: lightgrey;
