Start setup for using sass

--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -5,50 +5,52 @@
   "ionicons/ionicons.scss",
 
   // Variables
-  "mixins",
-  "variables",
+  "original_ionic/mixins",
+  "original_ionic/variables",
 
   // Base
-  "reset",
-  "scaffolding",
-  "type",
+  "original_ionic/reset",
+  "original_ionic/scaffolding",
+  "original_ionic/type",
 
   // Components
-  "action-sheet",
-  "backdrop",
-  "bar",
-  "tabs",
-  "menu",
-  "modal",
-  "popover",
-  "popup",
-  "loading",
-  "items",
-  "list",
-  "badge",
-  "slide-box",
-  "refresher",
-  "spinner",
+  "original_ionic/action-sheet",
+  "original_ionic/backdrop",
+  "original_ionic/bar",
+  "original_ionic/tabs",
+  "original_ionic/menu",
+  "original_ionic/modal",
+  "original_ionic/popover",
+  "original_ionic/popup",
+  "original_ionic/loading",
+  "original_ionic/items",
+  "original_ionic/list",
+  "original_ionic/badge",
+  "original_ionic/slide-box",
+  "original_ionic/refresher",
+  "original_ionic/spinner",
 
   // Forms
-  "form",
-  "checkbox",
-  "toggle",
-  "radio",
-  "range",
-  "select",
-  "progress",
+  "original_ionic/form",
+  "original_ionic/checkbox",
+  "original_ionic/toggle",
+  "original_ionic/radio",
+  "original_ionic/range",
+  "original_ionic/select",
+  "original_ionic/progress",
 
   // Buttons
-  "button",
-  "button-bar",
+  "original_ionic/button",
+  "original_ionic/button-bar",
 
   // Util
-  "grid",
-  "util",
-  "platform",
+  "original_ionic/grid",
+  "original_ionic/util",
+  "original_ionic/platform",
 
   // Animations
-  "animations",
-  "test",
-  "transitions";
+  "original_ionic/animations",
+  "original_ionic/transitions";
+
+  // Custom
+  // "custom/test";
