--- a/www/lib/ionic/scss/custom/calendar/_calendar.scss
+++ b/www/lib/ionic/scss/custom/calendar/_calendar.scss
@@ -7,97 +7,98 @@
   font-weight: bold;
   text-align: center;
   padding: 10px;
-}
 
-.month-bar .icon-holder {
-  font-size: 24px;
-}
+  .icon-holder {
+    font-size: 24px;
+  }
 
-.month-bar .back-icon {
-  position: absolute;
-  left: 5px;
-}
+  .back-icon {
+    position: absolute;
+    left: 5px;
+  }
 
-.month-bar .forward-icon {
-  position: absolute;
-  right: 5px;
+  .forward-icon {
+    position: absolute;
+    right: 5px;
+  }
 }
 
 .days-of-week-bar {
   background-color: grey;
   color: white;
+
+  .col {
+    background-color: lightgrey;
+    text-align: center;
+  }
+
+  &.special {
+    background-color: grey;
+  }
 }
 
-.days-of-week-bar .col {
-  background-color: lightgrey;
-  text-align: center;
+.dates {
+  .row {
+    margin-top: 0px;
+    border-bottom: 1px solid #f8f8f8;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    &:first-child {
+      border-top: none;
+    }
+
+    &:last-child {
+      border-bottom: none;
+    }
+
+  }
+
+  .col {
+    text-align: center;
+    position: relative;
+    min-height: 45px;
+    font-size: 20px;
+    padding: 0px;
+    border-left: 1px solid #f8f8f8;
+    border-right: 1px solid #f8f8f8;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    &:first-child {
+      border-left: none;
+    }
+
+    &:last-child {
+      border-right: none;
+    }
+
+    .date-number {
+      font-size: 12px;
+      position: absolute;
+      top: -3px;
+      left: 2px;
+    }
+    
+    .content-text {
+      padding-top: 20px;
+    }
+  }
+
+  &.not-current-month {
+    color: lightgrey;
+  }
+
+  .date-col {
+    &.active {
+      background-color: #FFFF9D;
+    }
+  }
 }
 
-.days-of-week-bar .col.special {
-  background-color: grey;
-}
 
-.dates .row {
-  margin-top: 0px;
-}
-
-.dates .col {
-  text-align: center;
-  position: relative;
-  min-height: 45px;
-  font-size: 20px;
-  padding: 0px;
-}
-
-.dates .date-col.active {
-  background-color: #FFFF9D;
-}
-
-.dates .col.not-current-month {
-  color: lightgrey;
-}
-
-.dates .col .date-number {
-  font-size: 12px;
-  position: absolute;
-  top: -3px;
-  left: 2px;
-}
-
-.dates .col .content-text {
-  padding-top: 20px;
-}
-
-.dates .row {
-  border-bottom: 1px solid #f8f8f8;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.dates .row:first-child {
-  border-top: none;
-}
-
-.dates .row:last-child {
-  border-bottom: none;
-}
-
-.dates .row .col {
-  border-left: 1px solid #f8f8f8;
-  border-right: 1px solid #f8f8f8;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.dates .row .col:first-child {
-  border-left: none;
-}
-
-.dates .row .col:last-child {
-  border-right: none;
-}
 
 
 
