--- a/www/lib/ionic/scss/custom/calendar/_shift_patterns.scss
+++ b/www/lib/ionic/scss/custom/calendar/_shift_patterns.scss
@@ -1,12 +1,16 @@
-.shifts-patterns .shift-pattern-group {
-  white-space: normal !important;
+.shifts-patterns {
+  .shift-pattern-group {
+    white-space: normal !important;
+  }
+
+  .shift-pattern-group-name {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .add-pattern {
+    text-decoration: none;
+  }
 }
 
-.shifts-patterns .shift-pattern-group-name {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
 
-.shifts-patterns .add-pattern {
-  text-decoration: none;
-}
