--- a/www/lib/ionic/scss/custom/general/groups/_detail.scss
+++ b/www/lib/ionic/scss/custom/general/groups/_detail.scss
@@ -1,24 +1,24 @@
 .detailed-group-header-holder {
   padding: 16px;
-}
 
-.detailed-group-header-holder button {
-  margin-top: 8px;
-}
+  button {
+    margin-top: 8px;
 
-.detailed-group-header-holder button.clicked {
-  padding-left: 50px;
-}
+    &.clicked {
+      padding-left: 50px;
+    }
+  }
 
-.detailed-group-header-holder .leave-group-link {
-  margin-left: -20px;
-  line-height: 4.6;
-}
+  .leave-group-link {
+    margin-left: -20px;
+    line-height: 4.6;
+  }
 
-.detailed-group-header-holder .join-leave-loader {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+  .join-leave-loader {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+  }
 }
 
 .detailed-group-footer-holder {
