Make main css to scss

--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -2,6 +2,8 @@
 
 @import
   // Custom
+  "custom/main",
+
   "custom/calendar/calendar",
   "custom/calendar/shift_input",
   "custom/calendar/shift_patterns",
