Use variable colour for highlighted calendar cell

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -21,5 +21,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 $positive:                        #02B5BA !default;
 $balanced:                        #FD7400 !default;
 $energized:                       #BEEB9F !default;
+$highlight:                       #FFFF9D !default;
+
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
