--- a/www/lib/ionic/scss/custom/calendar/_shift_input.scss
+++ b/www/lib/ionic/scss/custom/calendar/_shift_input.scss
@@ -14,8 +14,8 @@
 }
 
 .bottom-block {
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  text-align: center;
+  // position: absolute;
+  // bottom: 0px;
+  // width: 100%;
+  // text-align: center;
 }
